src/tests/errors/casting/002.ura
// errors/casting/002 — cannot cast int to a struct via `as`
use "@/header"

struct Point:
    x int
    y int

main():
    p Point = 5 as Point
    output(p.x, "\n")
