src/tests/errors/casting/002.err
[1m[0;31merror: [0mexpected data type after 'as'
  [1m[34m-->[0m src/tests/errors/casting/002.ura:9:17
  [1m[34m|[0m
[1m[34m9 |[0m     p Point = 5 as Point
  [1m[34m|[0m                 [1;31m^^[0m
